[package]
name = "phil-opp_tutorial"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"

[dependencies]
bootloader = "0.9.8"
volatile = "0.2.6"
lazy_static = { version = "1.0", features = ["spin_no_std"] }
spin = "0.5.2"
